' run: 
'cd docs/diagrams/src
'plantuml -tpng -Ddpi=300 -o ../export orm_class.puml

@startuml orm_class_diagram
' --- Common style (keep identical across all PlantUML diagrams) ---
hide circle
skinparam Shadowing false
skinparam RoundCorner 8
skinparam ClassAttributeIconSize 0
skinparam DefaultFontName Arial
skinparam DefaultFontSize 20
skinparam ArrowColor #333333
skinparam LineColor #333333
skinparam PackageBorderColor #333333
skinparam PackageBackgroundColor #FFFFFF
skinparam ClassBorderColor #333333
skinparam ClassBackgroundColor #FFFFFF
' Make object diagrams black & white as well
skinparam ObjectBorderColor #333333
skinparam ObjectBackgroundColor #FFFFFF
skinparam NoteBackgroundColor #FFFFFF
skinparam NoteBorderColor #333333
skinparam BackgroundColor #FFFFFF
' Force black & white fills for non-class shapes (rectangle/component/etc.)
skinparam RectangleBackgroundColor #FFFFFF
skinparam RectangleBorderColor #333333
skinparam ComponentBackgroundColor #FFFFFF
skinparam ComponentBorderColor #333333

' --- Layout tuning for A4 portrait readability ---
top to bottom direction
skinparam linetype ortho
skinparam ranksep 45
skinparam nodesep 25
skinparam padding 10

package "ORM (backend/models/orm/*)" {

  ' -------------------------
  ' Identity / auth (minimal)
  ' -------------------------
  together {
    class Doctor {
      +id : int
      +role : DoctorRole
      +is_active : bool
      +is_head : bool
    }

    class User {
      +id : int
      +email : str
      +role : UserRole
      +password_hash : str
      +doctor_id : int?
      +is_active : bool
    }

    class PasswordResetToken {
      +id : int
      +user_id : int
      +token : str
      +expires_at : datetime
      +created_at : datetime
    }
  }

  ' -------------------------
  ' Preferences triad
  ' -------------------------
  together {
    class PreferenceWorking {
      +id : int
      +doctor_id : int
      +year : int
      +month : int
      +lock_version : int
    }

    class PreferenceVersion {
      +id : int
      +doctor_id : int
      +year : int
      +month : int
      +payload : JSON
      +created_at : datetime
    }

    class PreferencePointer {
      +id : int
      +doctor_id : int
      +year : int
      +month : int
      +current_version_id : int?
      +submitted_at : datetime?
    }

    class PreferenceDeadline {
      +id : int
      +year : int
      +month : int
      +deadline_utc : datetime
      +org_timezone : str
    }
  }

  ' -------------------------
  ' Schedules triad + diagnostics cache
  ' -------------------------
  together {
    class ScheduleWorking {
      +year : int
      +month : int
      +payload : JSON
      +lock_version : int
      +updated_at : datetime
    }

    class ScheduleVersion {
      +id : int
      +year : int
      +month : int
      +kind : draft_or_published
      +payload : JSON
      +created_at : datetime
    }

    class SchedulePointer {
      +year : int
      +month : int
      +current_draft_version_id : int?
      +current_published_version_id : int?
      +updated_at : datetime
    }

    class ScheduleDiagnostics {
      +id : int
      +version_id : int
      +quality : JSON
      +computed_at : datetime
    }
  }
}

' =========================
' Relationships (FK / intent)
' =========================

' Identity/auth
User "0..1" --> "1" Doctor : doctor_id (unique)

' One active reset token per user (enforced by uq_password_reset_tokens_user_id)
PasswordResetToken "0..1" --> "1" User : user_id (unique)

' Preferences (triad)
PreferenceWorking "*" --> "1" Doctor : doctor_id
PreferenceVersion "*" --> "1" Doctor : doctor_id
PreferencePointer "*" --> "1" Doctor : doctor_id
PreferencePointer "0..1" --> "1" PreferenceVersion : current_version_id

' Schedule pointers reference schedule versions (optional)
SchedulePointer "*" --> "0..1" ScheduleVersion : current_draft_version_id
SchedulePointer "*" --> "0..1" ScheduleVersion : current_published_version_id

' Diagnostics cache is 1:1 with a version (unique version_id)
ScheduleDiagnostics "1" --> "1" ScheduleVersion : version_id (unique)

' =========================
' Layout helpers (hidden links)
' =========================
' Force three vertical "columns": Identity / Preferences / Schedules

' Identity column
PasswordResetToken -[hidden]down-> User
User -[hidden]down-> Doctor

' Preferences column
PreferenceDeadline -[hidden]down-> PreferencePointer
PreferencePointer  -[hidden]down-> PreferenceVersion
PreferenceVersion  -[hidden]down-> PreferenceWorking
PreferenceWorking  -[hidden]down-> Doctor

' Schedules column
ScheduleWorking     -[hidden]down-> SchedulePointer
SchedulePointer     -[hidden]down-> ScheduleVersion
ScheduleDiagnostics -[hidden]down-> ScheduleVersion
ScheduleVersion     -[hidden]down-> Doctor

@enduml


' @startuml orm_class_diagram1
' ' --- Common style (keep identical across all PlantUML diagrams) ---
' hide circle
' skinparam Shadowing false
' skinparam RoundCorner 8
' skinparam ClassAttributeIconSize 0
' skinparam DefaultFontName Arial
' skinparam DefaultFontSize 20
' skinparam ArrowColor #333333
' skinparam LineColor #333333
' skinparam PackageBorderColor #333333
' skinparam PackageBackgroundColor #FFFFFF
' skinparam ClassBorderColor #333333
' skinparam ClassBackgroundColor #FFFFFF
' ' Make object diagrams black & white as well
' skinparam ObjectBorderColor #333333
' skinparam ObjectBackgroundColor #FFFFFF
' skinparam NoteBackgroundColor #FFFFFF
' skinparam NoteBorderColor #333333
' skinparam BackgroundColor #FFFFFF
' ' Force black & white fills for non-class shapes (rectangle/component/etc.)
' skinparam RectangleBackgroundColor #FFFFFF
' skinparam RectangleBorderColor #333333
' skinparam ComponentBackgroundColor #FFFFFF
' skinparam ComponentBorderColor #333333


' ' --- Layout tuning for A4 portrait readability ---
' top to bottom direction
' skinparam linetype ortho
' skinparam ranksep 45
' skinparam nodesep 25
' skinparam padding 10

' package "ORM (backend/models/orm/*)" {

'   ' -------------------------
'   ' Identity / auth (minimal)
'   ' -------------------------
'   together {
'     class Doctor {
'       +id : int
'       +role : DoctorRole
'       +is_active : bool
'       +is_head : bool
'     }

'     class User {
'       +id : int
'       +email : str
'       +role : UserRole
'       +doctor_id : int?
'       +is_active : bool
'     }

'     class PasswordResetToken {
'       +id : int
'       +user_id : int
'       +expires_at : datetime
'     }
'   }

'   ' -------------------------
'   ' Preferences triad
'   ' -------------------------
'   together {
'     class PreferenceWorking {
'       +id : int
'       +doctor_id : int
'       +year : int
'       +month : int
'       +lock_version : int
'     }

'     class PreferenceVersion {
'       +id : int
'       +doctor_id : int
'       +year : int
'       +month : int
'       +payload : JSON
'       +created_at : datetime
'     }

'     class PreferencePointer {
'       +id : int
'       +doctor_id : int
'       +year : int
'       +month : int
'       +current_version_id : int?
'       +submitted_at : datetime?
'     }

'     class PreferenceDeadline {
'       +id : int
'       +year : int
'       +month : int
'       +deadline_utc : datetime
'       +org_timezone : str
'     }
'   }

'   ' -------------------------
'   ' Schedules triad + diagnostics cache
'   ' -------------------------
'   together {
'     class ScheduleWorking {
'       +year : int
'       +month : int
'       +payload : JSON
'       +lock_version : int
'       +updated_at : datetime
'     }

'     class ScheduleVersion {
'       +id : int
'       +year : int
'       +month : int
'       +kind : draft_or_published
'       +payload : JSON
'       +created_at : datetime
'     }

'     class SchedulePointer {
'       +year : int
'       +month : int
'       +current_draft_version_id : int?
'       +current_published_version_id : int?
'       +updated_at : datetime
'     }

'     class ScheduleDiagnostics {
'       +id : int
'       +version_id : int
'       +quality : JSON
'       +computed_at : datetime
'     }
'   }
' }

' ' =========================
' ' Relationships (FK / intent)
' ' =========================

' ' Identity/auth
' User "0..1" --> "1" Doctor : doctor_id (unique)
' PasswordResetToken "*" --> "1" User : user_id

' ' Preferences (triad)
' PreferenceWorking "*" --> "1" Doctor : doctor_id
' PreferenceVersion "*" --> "1" Doctor : doctor_id
' PreferencePointer "*" --> "1" Doctor : doctor_id
' PreferencePointer "0..1" --> "1" PreferenceVersion : current_version_id

' ' Schedule pointers reference schedule versions (optional)
' SchedulePointer "*" --> "0..1" ScheduleVersion : current_draft_version_id
' SchedulePointer "*" --> "0..1" ScheduleVersion : current_published_version_id

' ' Diagnostics cache is 1:1 with a version (unique version_id)
' ScheduleDiagnostics "1" --> "1" ScheduleVersion : version_id (unique)

' ' =========================
' ' Layout helpers (hidden links)
' ' =========================
' ' Force three vertical "columns": Identity / Preferences / Schedules

' ' Identity column
' PasswordResetToken -[hidden]down-> User
' User -[hidden]down-> Doctor

' ' Preferences column
' PreferenceDeadline -[hidden]down-> PreferencePointer
' PreferencePointer  -[hidden]down-> PreferenceVersion
' PreferenceVersion  -[hidden]down-> PreferenceWorking
' PreferenceWorking  -[hidden]down-> Doctor

' ' Schedules column
' ScheduleWorking     -[hidden]down-> SchedulePointer
' SchedulePointer     -[hidden]down-> ScheduleVersion
' ScheduleDiagnostics -[hidden]down-> ScheduleVersion
' ScheduleVersion     -[hidden]down-> Doctor

' @enduml
